--- a/index.html
+++ b/index.html
@@ -25,10 +25,12 @@
             <div id="takesr"></div>
         </div>
     </div>
+    <div id="gameover"></div>
     <div id="buttons">
         <button class="gbutton" id="next">Next</button>
         <button class="gbutton" id="more">Higher</button>
         <button class="gbutton" id="less">Lower</button>
+        <button class="gbutton" id="again">Play Again</button>
     </div>
 </body>
 
