--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
         <button class="gbutton" id="less">Lower</button>
         <button class="gbutton" id="again">Play Again</button>
     </div>
+    <h3>Created by Abby</h3>
 </body>
 
 </html>
